--- a/composer.json
+++ b/composer.json
@@ -13,24 +13,34 @@
   "type": "library",
 
   "require": {
-    "php": ">=7.1.0",
+    "php": ">=7.0.33",
     "likemusic/simple-http-client": "dev-master"
   },
-  "require-dev": {
-    "phpunit/phpunit" : "^7"
+
+  "config": {
+    "platform": {
+      "php": "7.0.33"
+    }
   },
+
+  "require-dev": {
+    "phpunit/phpunit" : "^6"
+  },
+
   "repositories": [
     {
       "type": "vcs",
       "url": "git@github.com:likemusic/simple-http-client.git"
     }
   ],
+
   "autoload": {
     "psr-4": {
       "Likemusic\\SimpleHttpClient\\FileGetContents\\": "src/",
       "Likemusic\\SimpleHttpClient\\FileGetContents\\Tests\\": "tests/"
     }
   },
+
   "authors": [
     {
       "name": "Valerij Ivashchenko",
